# Mizuki-Bot

./: .dockerignore  .env.example  Dockerfile  QUICKSTART.md  README.md  README_DATABASE.md  docker-compose.db.yml  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py
src/bot/core/: bot.py  plugin_manager.py
src/bot/plugins/: base_plugin.py
src/bot/plugins/admin/: __init__.py  plugin.py
src/bot/plugins/ping/: README.md  __init__.py  plugin.py
src/bot/utils/: database.py  logger.py
src/scripts/: create_plugin.py
